<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailFilmActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linear_layout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_film_detail"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/detail_text_film_type"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txt_film_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "Loading Film Type"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/detail_text_title"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txt_film_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Loading Title"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


        <TextView
            android:id="@+id/title_txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_text_description"
            android:textStyle="bold"
            android:textColor="@color/black"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_detail"/>

        <TextView
            android:id="@+id/txt_film_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading Description"
            android:textColor="@color/black"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_txt_description"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_anchorGravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

<!--    <com.dicoding.picodiploma.jetpacksubmissiontiga.utils.MyButton-->
<!--        android:id="@+id/btn_next"-->
<!--        android:text="@string/button_next"-->
<!--        android:textColor="@color/white"-->

<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginBottom="8dp"-->

<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

<!--    <com.dicoding.picodiploma.jetpacksubmissiontiga.utils.MyButton-->
<!--        android:id="@+id/btn_previous"-->
<!--        android:text="@string/button_previous"-->
<!--        android:textColor="@color/white"-->

<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginBottom="8dp"-->

<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>