...
<!--    <androidx.viewpager2.widget.ViewPager2-->
<!--        android:id="@+id/view_pager"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_row_film"


        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_go_to_tv_favorite_list"
            android:text="@string/button_go_to_tv_favorite"
            android:textColor="@color/white"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
...
